# zaya-agent

./: .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  cli-config.yaml.example  cli.py  constraints-termux.txt  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rl_cli.py  run_agent.py  setup-zaya.sh  setup.sh  toolsets.py  trajectory_compressor.py  utils.py  zaya  zaya-already-has-routines.md  zaya_constants.py  zaya_logging.py  zaya_state.py  zaya_time.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: deploy-site.yml  docker-publish.yml  nix.yml  skills-index.yml
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  empathy_engine.py  identity_learner.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  prompt_builder.py  redact.py  skill_commands.py  skill_utils.py  smart_model_routing.py
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: run_browser_tasks.sh  web_research.yaml
docker/: SOUL.md  entrypoint.sh
docs/: acp-setup.md  honcho-integration-spec.html  honcho-integration-spec.md
docs/migration/: openclaw.md
docs/plans/: 2026-03-16-pricing-accuracy-architecture-design.md
docs/skins/: example-skin.yaml
docs/specs/: container-cli-review-fixes.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  patches.py  tool_context.py  web_research_env.py  zaya_base_env.py
environments/terminal_test_env/: default.yaml  terminal_test_env.py
environments/tool_call_parsers/: __init__.py  longcat_parser.py  qwen_parser.py  zaya_parser.py
environments/zaya_swe_env/: default.yaml  zaya_swe_env.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  session.py  session_context.py  status.py  sticker_cache.py
gateway/builtin_hooks/: boot_md.py
landingpage/: demo.html  demo_server.py  index.html  script.js  style.css
optional-skills/: DESCRIPTION.md
optional-skills/migration/: DESCRIPTION.md
packaging/homebrew/: README.md
plans/: gemini-oauth-provider.md
plugins/: __init__.py
plugins/memory/: __init__.py
scripts/: build_skills_index.py  contributor_audit.py  discord-voice-doctor.py  install.sh  kill_modal.sh  release.py  sample_and_compress.py
scripts/whatsapp-bridge/: bridge.js  package-lock.json  package.json
skills/dogfood/: SKILL.md
tests/: conftest.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_ipv4_preference.py  test_mcp_serve.py  test_model_tools.py  test_plugin_skills.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_utils_truthy_values.py  test_zaya_constants.py  test_zaya_logging.py  test_zaya_state.py
tests/acp/: test_auth.py  (+4 more)
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  managed_tool_gateway.py  mcp_oauth.py  mcp_tool.py  memory_tool.py  openrouter_client.py  osv_check.py  process_registry.py  registry.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  tool_backend_helpers.py  tool_result_storage.py  transcription_tools.py  tts_tool.py  vision_tools.py  voice_mode.py  web_tools.py  (+1 more)
web/: README.md  index.html  package-lock.json  vite.config.ts
website/: docusaurus.config.ts  sidebars.ts
zaya_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zaya_cli/: __init__.py  auth.py  auth_commands.py  backup.py  banner.py  callbacks.py  claw.py  cli_output.py  clipboard.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curses_ui.py  debug.py  default_soul.py  doctor.py  dump.py  env_loader.py  gateway.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_normalize.py  model_switch.py  models.py  nous_subscription.py  pairing.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  runtime_provider.py  setup.py  skills_config.py  skills_hub.py  (+7 more)
(+707 files in other folders)
